@@ -1,3 +1,7 @@
+2001-09-24  Darin Adler  <darin@bentspoon.com>
+
+	* librsvg-2.0.pc.in: Update to point to libart 2.
+
 2001-09-17  Darin Adler  <darin@bentspoon.com>
 
 	* rsvg.h:
